# awsctl

./: README.rst  setup.cfg  tox.ini
tests/: test_cli.py
