[metadata]
name = awsctl
summary = Addition to aws
description-file =
    README.rst
author = Moe Faraji
author-email = faraji66@gmail.com
classifier =
    Environment :: Sproai
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =
    boogieclient
    aws

[files]
packages =
    awsctl


[entry_points]
console_scripts =
    awsctl = awsctl.cli:main

[bdist_wheel]
universal = 1

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[pbr]
autodoc_tree_index_modules = True
autodoc_tree_excludes = setup.py

[tool:pytest]
norecursedirs = build docs/_build *.egg .tox *.venv
addopts =
    --verbose --tb short --capture no
    --cov=boogie
    --cov-report=term-missing
    tests/

[flake8]
exclude = .git,__pycache__,dist,build,debian,*.egg,.tox,*.venv,og_tests,og_tests_new,tests_better,ez_setup.py,setup.py
ignore = E501,E123,E731,E402
